# scripts

./: README.md  path_finder_list.txt
bash/batch_transcribe/: batch_transcribe.md  batch_transcribe.sh
bash/clone/: clone.sh
bash/generate_readme/: generate_readme.md
bash/info/: info.md  info.sh
bash/symlinks/: symlinks.md  symlinks.sh
bash/til/: til.md
change_detector/: change_detector.md
clone/: clone.md
cronjobs/: cronjobs.md  cronjobs.txt
doc_maker/: doc_maker.md  doc_maker.py
dotforge/: README.md
dotforge/cli/: cli.go
dotforge/config/: config.go  init.go
dotforge/docs/: df.1
dotforge/dotfile/: link.go
dotforge/scanner/: scanner.go
dotforge/symlink/: symlink.go
exchanger/: Cargo.toml
extract_info/: extract_info.py
gdm/: gdm  gdm.go
gen-readme/: .gitattributes  file_scanner.py  hash_manager.py  logger.py  readme_writer.py  requirements.txt
generate_readme/: generate_readme.sh
go_readme/: .gitignore  cpu.prof
i3-dynamic-splits/: i3-dynamic-splits.md
macros/: macros.js  macros.ts  package-lock.json  package.json  scripts-exclude.txt  tsconfig.json
pathfinder/: Cargo.toml  README.adoc  pathfinder.1
renamer/: renamer.py
speaker/: speaker.py
speedtest/: speedtest.py
status_bar/: status_bar.md
til/: til.sh
treedoc/: .gitignore  Cargo.toml  flags.md  goals.md
treedoc/src/: change_detector.rs  db.rs  directory_scanner.rs  main.rs  metrics.rs  readme_manager.rs  readme_writer.rs  summary_generator.rs
watch_cronjobs/: watch_cronjobs.md  watch_cronjobs.sh
word_check/: word_check.md  word_check.pl  word_check.py
(+102 files in other folders)
