[package]
name = "treedoc"
version = "0.1.0"
edition = "2021"

[dependencies]
walkdir = "2.3"
rayon = "1.5"
sha2 = "0.10"
rusqlite = "0.28"
log = "0.4"
env_logger = "0.10"
memmap2 = "0.5"
indicatif = "0.16"
chrono = { version = "0.4", features = ["serde"] }
tree-sitter = "0.20"
tree-sitter-python = "0.20"
